--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+float-cmp = "0.9.0"
 lazy_static = "1.4.0"
+mockall = "0.11.3"
 once_cell = "1.16.0"
 rand = "0.8.5"
