--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,6 @@ edition = "2021"
 float-cmp = "0.9.0"
 lazy_static = "1.4.0"
 mockall = "0.11.3"
+mysql = "23.0.0"
 once_cell = "1.16.0"
 rand = "0.8.5"
