--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ mockall = "0.11.3"
 mysql = "23.0.0"
 once_cell = "1.16.0"
 rand = "0.8.5"
+reqwest = { version="0.11.13", features = ["blocking", "json"] }
+serde = {version="1.0.147", features =["derive"]}
+serde_json = "1.0.89"
